# attractor

./: README.md  attractor-spec.md  coding-agent-loop-spec.md  go.mod  go.sum  package-lock.json  plan.md  pyproject.toml  todo.md  unified-llm-spec.md
agentloop/: core_tools.go  doc.go  events.go  execution.go  loop_detection.go  profile.go  profile_anthropic.go  profile_gemini.go  profile_openai.go  session.go  subagent.go  system_prompt.go  tools.go  truncation.go  turns.go
apps/factory-api/src/: main.ts
apps/factory-web/: package.json  tailwind.config.ts
apps/factory-web/src/client/: styles.css
apps/factory-web/src/client/components/common/: data-state-panel.tsx  filter-bar.tsx  section-header.tsx  status-pill.tsx
apps/factory-web/src/client/components/layout/: app-shell.tsx  page-title.tsx  project-context-switcher.tsx
apps/factory-web/src/client/components/ui/: badge.tsx  button.tsx  card.tsx  command.tsx  field.tsx  input.tsx  popover.tsx  select.tsx  table.tsx  textarea.tsx
apps/factory-web/src/client/lib/: api.ts  filter-state.ts  types.ts
apps/factory-web/src/client/pages/: artifact-viewer-page.tsx  dashboard-page.tsx  project-attractors-page.tsx  project-overview-page.tsx  project-runs-page.tsx  project-secrets-page.tsx  projects-page.tsx  run-detail-page.tsx
factory/: environments-feature.dot
test/: web-filter-state.test.ts
unifiedllm/: catalog.go  catalog_test.go  client.go  client_test.go  doc.go  errors.go  errors_test.go  generate.go  gollm_adapter.go  gollm_adapter_test.go  provider.go  retry.go  retry_test.go  types.go  types_test.go
